dynamixel read_write test success

--- a/test/ping/Makefile
+++ b/test/ping/Makefile
@@ -2,7 +2,7 @@
 TARGET      = ping
 
 # important directories used by assorted rules and other variables
-DIR_DXL    = ..
+DIR_DXL    = ../..
 DIR_OBJS   = .objects
 
 # compiler options
