added read for snakeHW

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -167,8 +167,8 @@ include_directories(
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
 # add_executable(${PROJECT_NAME}_node src/snake_robot_node.cpp)
-add_executable(snake_robot src/main.cpp src/snakeHW.cpp)
-target_link_libraries(snake_robot ${catkin_LIBRARIES} dxl_x64_cpp rt)
+add_executable(main src/main.cpp src/snakeHW.cpp)
+target_link_libraries(main ${catkin_LIBRARIES} dxl_x64_cpp rt)
 
 add_executable(circle_TwoJointPublisher src/circle_TwoJointPublisher.cpp)
 target_link_libraries(circle_TwoJointPublisher ${catkin_LIBRARIES})
@@ -196,8 +196,6 @@ target_link_libraries(IK_client ${catkin_LIBRARIES})
 # target_link_libraries(${PROJECT_NAME}_node
 #   ${catkin_LIBRARIES}
 # )
-target_link_libraries(snake_robot ${catkin_LIBRARIES} ${Boost_LIBRARIES})
-
 #############
 ## Install ##
 #############
